# Jam-Engine-2025-

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/: CharacterObject.hpp  CollisionManager.hpp  EnemyObject.hpp  Engine.hpp  Entity.hpp  ResourceManager.hpp  SceneObject.hpp  Screen.hpp  ScreenManager.hpp  TextureLoader.hpp  Window.hpp
engine/src/: CharacterObject.cpp  EnemyObject.cpp  Engine.cpp  Entity.cpp  ResourceManager.cpp  SceneObject.cpp  TextureLoader.cpp  Window.cpp
game/: CMakeLists.txt
game/include/: GameScreen.hpp  MyGame.hpp  TitleScreen.hpp
game/src/: GameScreen.cpp  Launcher.cpp  MyGame.cpp  TitleScreen.cpp  main.cpp
